<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/head"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="es.urjc.mov.rmartin.quor.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user" />

    <EditText
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/type" />

    <Spinner
        android:id="@+id/lista1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/player2"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"

        android:text="@string/type" />


    <Spinner
        android:id="@+id/lista2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/player1"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/help"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:theme="@style/Switch"
        android:text="@string/ayuda"
        />
    <Button
        android:id="@+id/map"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:theme="@style/Switch"
        android:text="@string/map"
        />

    <Button
        android:id="@+id/start"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:fontFamily="casual"
        android:text="@string/empezar"
        android:textStyle="bold"
        android:theme="@style/Switch" />

</LinearLayout>
