<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.urjc.mov.rmartin.quor.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/restart"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:padding="5dp"
            android:src="@drawable/again" />

        <TextView
            android:id="@+id/jugadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="40"
            android:fontFamily="casual"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/games"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ganadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="40"
            android:fontFamily="casual"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/winner"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/peones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TableLayout
            android:id="@+id/tabla"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:text="@string/Pared"/>

        <Switch
            android:id="@+id/eleccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:theme="@style/Switch"
            android:thumbTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Movimiento" />
    </LinearLayout>

</android.widget.LinearLayout>